fix tests to pass on Java 1.4, again
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@784194 13f79535-47bb-0310-9956-ffa450edef68